--- a/mtemp-webapp/src/assets/styles/global.scss
+++ b/mtemp-webapp/src/assets/styles/global.scss
@@ -10,6 +10,20 @@
   background: rgba(0, 0, 0, 0.5);
 }
 
+.current-patient-info {
+  display: flex;
+  flex-direction: column;
+  span {
+    padding: 8px;
+  }
+  .buttons {
+    button {
+      margin: 4px;
+    }
+  }
+  margin-bottom: 20px;
+}
+
 .data-list {
   display: flex;
   flex-direction: column;
